<resources>
    <string name="app_name">InsurancePremiumCalc</string>
    <string name="age">Age</string>
    <string name="title">Insurance Premium Calculator</string>
    <string name="Gender">Gender</string>
    <string name="smoker">Smoker</string>
    <string name="smoke">smoke</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="result"></string>
    <string-array name ="AgeRange">
        <item>Less than 17</item>
        <item>17-25</item>
        <item>26-30</item>
        <item>31-40</item>
        <item>41-55</item>
        <item>More than 55</item>
    </string-array>
</resources>
